update new URL(String) method to new URI(String).toURL() method